# git-blamewars

./: .gitignore  README.md  dodo.py  pyproject.toml
.github/workflows/: test.yml
blamewars/: __init__.py  blamewars.py  gitstats.py  template.py
blamewars/templates/: blamewars.html
tests/: test_blamewars.py  test_gitstats.py  test_template.py
