[tool.poetry]
name = "git-blamewars"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygit2 = "^1.2.1"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
doit = "^0.32.0"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
